cdn 설정 전 네트워킹 속도 체크

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Hi, I'm Here!</h1>
+    <img
+      src="https://practice-cdn-638aa7bc33cd.herokuapp.com/image"
+      alt="image"
+    />
   </body>
 </html>
