--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,6 @@
   </head>
   <body>
     <h1>Hi, I'm Here!</h1>
-    <img
-      src="https://practice-cdn-638aa7bc33cd.herokuapp.com/image"
-      alt="image"
-    />
+    <img src="/public/깃허브.png" alt="image" />
   </body>
 </html>
