--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Hi, I'm Here!</h1>
-    <img src="/public/깃허브.png" alt="image" />
+    <img
+      src="https://gist.github.com/assets/78193416/fdc9b065-320d-4d07-bab3-925c5e5b2744"
+      alt="image"
+    />
   </body>
 </html>
